src/assets/style.css
/* ... */
#viewCount { font-size: var(--smallFont); }
.listViewContainer {
  display: flex;
  align-items: center;
  gap: 0.4em;
}

#listDescription {
  --gradEnabled: linear-gradient(0deg, black, transparent);
  font-size: var(--smallFont);
  padding: 0.1em 0.4em;
  text-shadow: none;
  margin: 0;
  min-height: 6em;
  height: 6em;
  transition: height 0.2s ease-in-out;
  overflow: hidden;
  line-height: 130%;
}

#listDescription::before {
	content: "";
	background: var(--gradEnabled);
	width: 100%;
	height: 1em;
	position: absolute;
  left: 0;
  bottom: 0;
  border-radius: 2em;
}

#noDesc {
	opacity: 0.2;
	margin: 0.5em;
}

#showMore {
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	border: none;
	width: 3em;
	border-radius: 1em 1em 0em 0em;
	background: var(--normalColor);
	filter: brightness(2.5);
	cursor: pointer;
}

/* Crown */
#toplevel::before {
  content: "";
  background: url(../images/crown.webp);
  background-repeat: repeat;
  background-size: auto;
  width: 100%;
  height: 218px;
  position: absolute;
  top: -87px;
  left: 0;
  background-size: 12em;
  background-repeat: no-repeat;
  background-position-x: center;
  z-index: 3;
  pointer-events: none;
}

.boxLinksContainer {
  display: flex;
  margin-right: 5em;
}

.settingsDropdown {
  background: var(--normalColor);
  border: none;
  border-radius: 0.5vw;
  font-size: var(--smallFont) !important;
  text-align: center;
  box-shadow: #0009 0vw 0vw 1vw;
}

.siteSettingsChild {
  display: flex;
  flex-direction: column;
  background: #0000004a;
  border-radius: 1em;
  align-items: center;
  padding: 0.6em;
  width: 100%;
  box-sizing: border-box;
}

.siteSettingsChild > p {
  margin: 0;
}

.settingsMenu {
  position: absolute;
  background: var(--greenGradient);
  right: 0.75em;
  top: 4em;
  padding: 0.6em;
  width: max-content;
  border-radius: 0.7em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.6em;
}

.favoriteStar {
  position: relative;
  bottom: 0.6em;
  left: 0.5em;
  width: 3em;
  float: right;
}

.scrollToTop {
  width: 2em;
  transform: rotate(90deg) !important;
  opacity: 0;
  transition: opacity 0.2s linear;
  pointer-events: all;
  margin: 1%;
  z-index: 2;
}
.overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  pointer-events: none;
}

.listHeader {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 0.7em;
}

.boxHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}

.boxLink {
  width: 5em;
  height: 5em;
  margin-right: 5%;
  filter: drop-shadow(#000000c2 0px 0px 8px);
}

.collabParent {
  display: flex !important;
  margin-top: 0.5em;
  flex-wrap: wrap;
  justify-content: center;
  background: #0000003b !important;
  border-radius: 12px;
}

.collabParent:hover {
  transform: scale(1.02) !important;
}

.collabChild {
  margin: 0.4em;
  display: flex;
  align-items: center;
}

.memberName {
  transition: text-shadow 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.pStatsContainer {
  background: #00000047;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
}

@keyframes loading {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

.loading {
  width: 1em;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

.nameShower {
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
}

#graphPercentage {
  font-size: var(--smallFont) !important;
  margin: 0 1vw;
}

.graphContainer {
  width: 85%;
  height: 2em;
  display: inherit;
  background: #00000039;
  border-radius: 5px;
}

.graphLine:hover {
  transform: scaleY(1.2);
}

.graphLine:first-child {
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}
.graphLine:last-child {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.graphPerc {
  display: flex;
  justify-content: space-between;
  opacity: 0;
  transition: opacity 0.1s;
  transform: scaleY(0.8);
  font-size: var(--smallFont);
}

.graphLine {
  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
  transform: none;
  min-height: var(--normalFont);
}

.finishDiffList {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1% 0;
  margin-top: 5vh !important;
  width: clamp(2vw, 90vw, 40em);
}

.boxCollabHeader {
  margin-bottom: 0 !important;
  display: flex;
  justify-content: center;
  align-items: center;
}

.boxIcon {
  width: 2em;
  margin-right: 0.5em;
  height: 2em;
}

#discordTag {
  padding-right: 1.5vw;
  margin: 0;
  font-size: var(--smallFont);
  -webkit-text-stroke: 0.1vw black;
  color: #c8fcc7;
  padding-right: 2vw;
}

.popup {
  display: block;
  margin-left: 37%;
  margin-right: 5%;
  margin-bottom: auto;
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 8px;
  padding: 8px 5px 5px 5px;
  text-align: center;
  width: 60%;
}

.yearButtonImg {
  border: none;
  margin: 0 !important;
  background: #13131387;
  font-size: var(--bigFont) !important;
  cursor: pointer;
  padding: 0.2em 1em;
  border-radius: 10em;
  display: flex;
  gap: 0.5em;
  align-items: center;
}

.yearButtonImg > h4 {
  margin: 0;
  line-height: 100%;
}

.yearButtonImg > img {
  width: var(--smallFont);
}

.verticalSplitter {
  height: 2em;
  margin: 0 0.2em;
  width: 0.3em;
  border: none;
  border-radius: 9px;
  background: var(--greenGradient);
  box-sizing: border-box;
}

.stats {
  width: var(--normalFont);
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
    height: 100%;
    scroll-behavior: smooth;
}

.button {
  display: inline;
  background-color: #00000000;
  transform: scale(1.0);
  transition-duration: 0.2s;
  border: none;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.button:active:not(#categoryBut) {
  animation-name: buttonJump;
  animation-duration: 0.1s;
}
/* ... */

